<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary"
    tools:context="pl.plantoplate.ui.main.ActivityMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimaryVariant"

        android:outlineAmbientShadowColor="?attr/colorSecondaryVariant"
        android:outlineSpotShadowColor="?attr/colorSecondaryVariant"

        app:itemIconTint="?attr/colorSecondaryVariant"

        app:itemRippleColor="?attr/colorOnTertiary"
        app:itemTextColor="?attr/colorSecondaryVariant"

        app:itemIconSize="24dp"

        app:itemTextAppearanceInactive="@style/menu_text_n_active"
        app:itemTextAppearanceActive="@style/menu_text_active"

        app:labelVisibilityMode="labeled"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>